--- a/blog.html
+++ b/blog.html
@@ -41,6 +41,11 @@
 						<h2>Recent Blog Posts</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall">
+								<a href="https://medium.com/road-to-the-rising-sun/were-off-the-beginning-of-a-new-chapter-60fb434c6771" target="_blank" class="image fit thumb"><img src="images/Departure-Brussels.jpg" alt="" /></a>
+								<h3>We’re off! The beginning of a new chapter</h3>
+								<!--<p>More about why Manon is so excited to embark on this journey!</p>-->
+							</article>
+							<article class="col-6 col-12-xsmall">
 								<a href="https://medium.com/road-to-the-rising-sun/from-brussels-to-tokyo-on-a-two-wheel-wonder-62bed2f486a0" target="_blank" class="image fit thumb"><img src="images/Cycles-Gladiator.jpg" alt="" /></a>
 								<h3>From Brussels to Tokyo on a two-wheel wonder</h3>
 								<!--<p>More about why Manon is so excited to embark on this journey!</p>-->
@@ -419,7 +424,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-                        <li><a href="https://github.com/Driesvanransbeeck/biketour" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://www.instagram.com/freewheelingtotherisingsun/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://www.facebook.com/FreewheelingToTheRisingSun/" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="https://github.com/Driesvanransbeeck/biketour" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
 						<li><a href="mailto:driesvanransbeeck@gmail.com" target="_blank" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
