Add GPX until day 20 + blog post

--- a/blog.html
+++ b/blog.html
@@ -40,6 +40,11 @@
 					<section id="two">
 						<h2>Recent Blog Posts</h2>
 						<div class="row">
+								<article class="col-6 col-12-xsmall">
+										<a href="https://medium.com/road-to-the-rising-sun/bye-bye-to-western-europe-hello-to-the-east-e76549c9f94a?fbclid=IwAR0K2A50F23NcOvo1wyIlqQWmmsMSbB60Hisw0o-HbxS-Bjrnsyel2FLpnk" target="_blank" class="image fit thumb"><img src="images/Along-Danube.jpg" alt="" /></a>
+										<h3>Bye bye to Western Europe, hello to the East!</h3>
+										<!--<p>More about why Manon is so excited to embark on this journey!</p>-->
+									</article>
 							<article class="col-6 col-12-xsmall">
 								<a href="https://medium.com/road-to-the-rising-sun/were-off-the-beginning-of-a-new-chapter-60fb434c6771" target="_blank" class="image fit thumb"><img src="images/Departure-Brussels.jpg" alt="" /></a>
 								<h3>We’re off! The beginning of a new chapter</h3>
