Add GPX until day 30 + blog post

--- a/blog.html
+++ b/blog.html
@@ -40,25 +40,25 @@
 					<section id="two">
 						<h2>Recent Blog Posts</h2>
 						<div class="row">
-								<article class="col-6 col-12-xsmall">
-										<a href="https://medium.com/road-to-the-rising-sun/bye-bye-to-western-europe-hello-to-the-east-e76549c9f94a?fbclid=IwAR0K2A50F23NcOvo1wyIlqQWmmsMSbB60Hisw0o-HbxS-Bjrnsyel2FLpnk" target="_blank" class="image fit thumb"><img src="images/Along-Danube.jpg" alt="" /></a>
-										<h3>Bye bye to Western Europe, hello to the East!</h3>
-										<!--<p>More about why Manon is so excited to embark on this journey!</p>-->
-									</article>
+							<article class="col-6 col-12-xsmall">
+								<a href="https://medium.com/road-to-the-rising-sun/fewer-cycling-paths-more-fascinating-inside-stories-and-stray-dogs-af11f5567bc1" target="_blank" class="image fit thumb"><img src="images/Belgrade.jpg" alt="" /></a>
+								<h3>Fewer cycling paths, more fascinating inside stories and stray dogs</h3>
+							</article>
+							<article class="col-6 col-12-xsmall">
+									<a href="https://medium.com/road-to-the-rising-sun/bye-bye-to-western-europe-hello-to-the-east-e76549c9f94a?fbclid=IwAR0K2A50F23NcOvo1wyIlqQWmmsMSbB60Hisw0o-HbxS-Bjrnsyel2FLpnk" target="_blank" class="image fit thumb"><img src="images/Along-Danube.jpg" alt="" /></a>
+									<h3>Bye bye to Western Europe, hello to the East!</h3>
+							</article>
 							<article class="col-6 col-12-xsmall">
 								<a href="https://medium.com/road-to-the-rising-sun/were-off-the-beginning-of-a-new-chapter-60fb434c6771" target="_blank" class="image fit thumb"><img src="images/Departure-Brussels.jpg" alt="" /></a>
 								<h3>We’re off! The beginning of a new chapter</h3>
-								<!--<p>More about why Manon is so excited to embark on this journey!</p>-->
 							</article>
 							<article class="col-6 col-12-xsmall">
 								<a href="https://medium.com/road-to-the-rising-sun/from-brussels-to-tokyo-on-a-two-wheel-wonder-62bed2f486a0" target="_blank" class="image fit thumb"><img src="images/Cycles-Gladiator.jpg" alt="" /></a>
 								<h3>From Brussels to Tokyo on a two-wheel wonder</h3>
-								<!--<p>More about why Manon is so excited to embark on this journey!</p>-->
 							</article>
 							<article class="col-6 col-12-xsmall">
 								<a href="https://medium.com/road-to-the-rising-sun/2019-here-we-go-cycling-all-the-way-from-brussels-to-tokyo-and-im-not-kidding-c389e55a2b69" target="_blank" class="image fit thumb"><img src="images/Itinerary.jpg" alt="" /></a>
 								<h3>2019, here we go: cycling all the way from Brussels to Tokyo (and I’m not kidding)</h3>
-								<!--<p>2019, here we go: cycling all the way from Brussels to Tokyo (and I’m not kidding)</p>-->
 							</article>
 						</div>
 						<ul class="actions">
@@ -429,8 +429,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="https://www.instagram.com/freewheelingtotherisingsun/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="https://www.facebook.com/FreewheelingToTheRisingSun/" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.instagram.com/_roadtotherisingsun/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://www.facebook.com/RoadToTheRisingSun" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="https://github.com/Driesvanransbeeck/biketour" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
 						<li><a href="mailto:driesvanransbeeck@gmail.com" target="_blank" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
