Add GPX until day 39 + blog

--- a/blog.html
+++ b/blog.html
@@ -41,6 +41,10 @@
 						<h2>Recent Blog Posts</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall">
+								<a href="https://medium.com/road-to-the-rising-sun/impressed-by-the-beauty-of-the-balkans-cycling-from-belgrade-to-sofia-239482c65aca" target="_blank" class="image fit thumb"><img src="images/CyclistsBelgrade.jpg" alt="" /></a>
+								<h3>Impressed by the beauty of the Balkans: cycling from Belgrade to Sofia</h3>
+							</article>
+							<article class="col-6 col-12-xsmall">
 								<a href="https://medium.com/road-to-the-rising-sun/fewer-cycling-paths-more-fascinating-inside-stories-and-stray-dogs-af11f5567bc1" target="_blank" class="image fit thumb"><img src="images/Belgrade.jpg" alt="" /></a>
 								<h3>Fewer cycling paths, more fascinating inside stories and stray dogs</h3>
 							</article>
