--- a/blog.html
+++ b/blog.html
@@ -41,6 +41,10 @@
 						<h2>Recent Blog Posts</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall">
+								<a href="https://medium.com/road-to-the-rising-sun/turkey-the-country-that-made-us-change-our-travel-itinerary-199e32a3b0bd" target="_blank" class="image fit thumb"><img src="images/Caywithlocals.jpg" alt="" /></a>
+								<h3>Turkey: the country that made us change our travel itinerary</h3>
+							</article>
+							<article class="col-6 col-12-xsmall">
 								<a href="https://medium.com/road-to-the-rising-sun/impressed-by-the-beauty-of-the-balkans-cycling-from-belgrade-to-sofia-239482c65aca" target="_blank" class="image fit thumb"><img src="images/CyclistsBelgrade.jpg" alt="" /></a>
 								<h3>Impressed by the beauty of the Balkans: cycling from Belgrade to Sofia</h3>
 							</article>
