--- a/blog.html
+++ b/blog.html
@@ -41,6 +41,10 @@
 						<h2>Recent Blog Posts</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall">
+								<a href="https://medium.com/road-to-the-rising-sun/the-end-of-our-2-unforgettable-months-in-turkey-d959fcf43f79" target="_blank" class="image fit thumb"><img src="images/Manon-LoveValley.jpg" alt="" /></a>
+								<h3>The end of our 2 unforgettable months in Turkey!</h3>
+							</article>
+							<article class="col-6 col-12-xsmall">
 								<a href="https://medium.com/road-to-the-rising-sun/turkey-the-country-that-made-us-change-our-travel-itinerary-199e32a3b0bd" target="_blank" class="image fit thumb"><img src="images/Caywithlocals.jpg" alt="" /></a>
 								<h3>Turkey: the country that made us change our travel itinerary</h3>
 							</article>
