--- a/blog.html
+++ b/blog.html
@@ -41,6 +41,10 @@
 						<h2>Recent Blog Posts</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall">
+								<a href="https://medium.com/road-to-the-rising-sun/one-month-of-nature-in-its-purest-form-in-tajikistan-kyrgyzstan-dbcd5d310e9b" target="_blank" class="image fit thumb"><img src="images/Akbaital.jpg" alt="" /></a>
+								<h3>One month of nature in its purest form in Tajikistan & Kyrgyzstan</h3>
+							</article>
+							<article class="col-6 col-12-xsmall">
 								<a href="https://medium.com/road-to-the-rising-sun/tour-of-turkmenistan-race-against-time-5db84b508a06" target="_blank" class="image fit thumb"><img src="images/heatprotection.jpg" alt="" /></a>
 								<h3>Tour of Turkmenistan: race against time</h3>
 							</article>
