Update itinerary map and add announcement Velo Tour Festival

--- a/blog.html
+++ b/blog.html
@@ -41,6 +41,10 @@
 						<h2>Recent Blog Posts</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall">
+								<a href="https://velotourfestival.be/" target="_blank" class="image fit thumb"><img src="images/velotourfestival.jpg" alt="" /></a>
+								<h3>We're going to organise the first Velo Tour Festival in Belgium next year!</h3>
+							</article>
+							<article class="col-6 col-12-xsmall">
 								<a href="https://medium.com/road-to-the-rising-sun/one-month-of-nature-in-its-purest-form-in-tajikistan-kyrgyzstan-dbcd5d310e9b" target="_blank" class="image fit thumb"><img src="images/Akbaital.jpg" alt="" /></a>
 								<h3>One month of nature in its purest form in Tajikistan & Kyrgyzstan</h3>
 							</article>
