--- a/blog.html
+++ b/blog.html
@@ -41,6 +41,10 @@
 						<h2>Recent Blog Posts</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall">
+								<a href="https://medium.com/road-to-the-rising-sun/china-a-country-with-multiple-faces-our-journey-and-impressions-on-the-bicycle-4c38e9a638ab" target="_blank" class="image fit thumb"><img src="images/China.jpg" alt="" /></a>
+								<h3>China, a country with multiple faces: our journey and impressions on the bicycle</h3>
+							</article>
+							<article class="col-6 col-12-xsmall">
 								<a href="https://velotourfestival.be/" target="_blank" class="image fit thumb"><img src="images/velotourfestival.jpg" alt="" /></a>
 								<h3>We're going to organise the first Velo Tour Festival in Belgium next year!</h3>
 							</article>
