add highlights and recommendations locals to map

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
    integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
    crossorigin=""></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-gpx/1.4.0/gpx.min.js"></script>
+    <script src="recommendations-locals.js"></script>
+    <script src="highlights.js"></script>
     <script type="text/javascript" src="app.jsx"></script>  
 </body>
     
