--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
    integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
    crossorigin=""/>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script defer data-domain="roadtotherisingsun.be" src="https://visitors.slowby.travel/js/script.js"></script>
 </head>
     
 <body>
